Replace stub with actual values

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,19 @@
 [tool.poetry]
-name = "application"
+name = "registration"
 version = "0.1.0"
 description = ""
 authors = ["Name Surname <email@domain.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.28.1"
+Flask = "^2.2.2"
+psycopg2 = "^2.9.4"
 
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-application = "application.__main__:main"
+registration = "registration.__main__:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
